csrc/tests/zxbc_parse_expected/due_crash.err.expected
<PROJECT_ROOT>/tests/functional/arch/zx48k/due_crash.bas:1: error: Syntax Error. Unexpected token 'CODE' <CODE>
